Bug 1565129 - Re-introduce plain_text.wrap_long_lines. r=bzbarsky
Looks like some users use it, and it's not too much effort to support. This is
somewhat simpler, and IMO better than what existed before bug 1514655 because:

 * It doesn't regress bidi rendering when the pref is disabled (before, the pref
   would prevent plaintext.css from applying altogether).

 * It's consistent with the way view-source docs work.

 * It doesn't use non-standard stylesheet APIs to toggle the stylesheet
   (bug 1260720).

Differential Revision: https://phabricator.services.mozilla.com/D37742

UltraBlame original commit: 16bc2f5a8e199244beca4c28b93c0084e333d323

--- a/layout/style/res/plaintext.css
+++ b/layout/style/res/plaintext.css
@@ -8,6 +8,10 @@ pre {
   -moz-control-character-visibility: visible;
 }
 
+.nowrap pre {
+  white-space: pre;
+}
+
 
 html:not([dir]) pre { 
   unicode-bidi: plaintext;
